Last minute panic

--- a/codesamples/transpiling/tsconfig.json
+++ b/codesamples/transpiling/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "rootDir": ".",
-        "target": "esnext",
+        "target": "es3",
         "module": "commonjs",
         "lib": [
             "dom",
