--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "deploy": "npm run clean & npm run build && surge -p .",
     "export": "spectacle-renderer --delay 3000",
     "start": "cross-env NODE_ENV=development node server.js",
-    "transpile": "tsc -w -p codesamples/transpiling/tsconfig.json"
+    "transpile_ar": "tsc -w -p codesamples/transpiling/tsconfig.json",
+    "transpile": "tsc -w -p codesamples/transpile/tsconfig.json"
   },
   "author": "",
   "license": "MIT",
