--- a/codesamples/transpile/tsconfig.json
+++ b/codesamples/transpile/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "rootDir": ".",
-        "target": "esnext",
+        "target": "es5",
         "lib": [
             "dom",
             "esnext"
